# post_generation

./: .gitignore  README copy.md  README.md  pyproject.toml
.config/: mastodon_config.json.example  notion_config.json.example  openrouter_config.json.example  replicate_config.json.example  telegram_config.json.example  workflow_config.json.example
arxiv-abstracts/: 2001.01919.md  2001.06855.md  2012.11034.md  2103.01818.md  2208.08365.md  2305.19944.md  2402.16723.md  2404.19058.md  2407.01567.md  2409.15945.md  2410.20619.md  2501.02730.md  2501.15034.md  2502.14466.md  2502.17415.md  2502.20674.md  2503.07335.md  2503.14151.md  2503.17197.md  2504.00295.md  2504.03319.md  2504.07050.md  2505.00939.md  2505.04691.md  2505.05445.md  2505.07084.md  2505.10107.md  2505.21520.md  2505.23546.md  2506.12616.md  2506.15081.md  2506.19099.md  2507.21486.md  2508.15345.md  2509.06785.md  2509.11686.md  2509.15824.md  2509.19620.md  2509.20463.md  2510.14831.md  (+11 more)
deploy/: README.md  config_template.sh  deploy.sh  deploy_from_local.ps1  deploy_from_local.sh  diagnose_deployment.ps1  fix_deployment.ps1  post-generation.service  setup_environment.sh  setup_systemd.sh
src/: __init__.py  arxiv_rag.py  generate_figure.py  mastodon_agent.py  notion_agent.py  openrouter_client.py  post_workflow.py  telegram_agent.py
src/image_generation/: generate_figure.py  train_generation.py
